--- a/src/views/DeliveriesPage/DeliveriesPanel/DeliveriesPanel.css
+++ b/src/views/DeliveriesPage/DeliveriesPanel/DeliveriesPanel.css
@@ -1,4 +1,4 @@
-.EmployeePanelWrapper {
+.DeliveriesPanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -8,13 +8,13 @@
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
     margin: 0;
     position: absolute;
-    top: 55%;
+    top: 60%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
 
-.EmployeeName{
+.DeliveriesID{
     margin-left: 130px;
     height: 19px;
     color: #2F2F2F;
@@ -23,12 +23,12 @@
     font-weight: bold;
     letter-spacing: 0;
     line-height: 19px;
-    max-width: 125px;
+    max-width: 100px;
     gap: 250px;
 }
 
-.EmployeePosition{
-    margin-left: 65px;
+.DeliveriesData{
+    margin-left: 35px;
     height: 19px;
     color: #2F2F2F;
     font-family: 'Montserrat', sans-serif;
@@ -39,8 +39,8 @@
     max-width: 100px;
 }
 
-.EmployeeNumber{
-    margin-left: 70px;
+.DeliveriesDetails{
+    margin-left: 30px;
     height: 19px;
     color: #2F2F2F;
     font-family: 'Montserrat', sans-serif;
@@ -48,10 +48,22 @@
     font-weight: bold;
     letter-spacing: 0;
     line-height: 19px;
-    max-width: 140px;
+    max-width: 100px;
 }
 
-.EmployeeHeaderWrapper {
+.DeliveriesStatus{
+    margin-left: 20px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 100px;
+}
+
+.DeliveriesHeaderWrapper {
     background-color: rgba(80, 110, 223, 0.1);
     width: 1100px;
     height: 50px;
