--- a/src/views/EmployeesPage/EmployeesPanel/EmployeesPanel.css
+++ b/src/views/EmployeesPage/EmployeesPanel/EmployeesPanel.css
@@ -1,4 +1,4 @@
-.DeliveryPanelWrapper {
+.EmployeesPanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -8,14 +8,14 @@
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
     margin: 0;
     position: absolute;
-    top: 60%;
+    top: 55%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
 
-.DeliveryID{
-    margin-left: 90px;
+.EmployeesName{
+    margin-left: 130px;
     height: 19px;
     color: #2F2F2F;
     font-family: 'Montserrat', sans-serif;
@@ -23,12 +23,12 @@
     font-weight: bold;
     letter-spacing: 0;
     line-height: 19px;
-    max-width: 100px;
+    max-width: 125px;
     gap: 250px;
 }
 
-.DeliveryData{
-    margin-left: 25px;
+.EmployeesPosition{
+    margin-left: 65px;
     height: 19px;
     color: #2F2F2F;
     font-family: 'Montserrat', sans-serif;
@@ -39,19 +39,7 @@
     max-width: 100px;
 }
 
-.DeliverySzczegoly{
-    margin-left: 40px;
-    height: 19px;
-    color: #2F2F2F;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    letter-spacing: 0;
-    line-height: 19px;
-    max-width: 100px;
-}
-
-.DeliveryStatus{
+.EmployeesNumber{
     margin-left: 70px;
     height: 19px;
     color: #2F2F2F;
@@ -60,10 +48,10 @@
     font-weight: bold;
     letter-spacing: 0;
     line-height: 19px;
-    max-width: 100px;
+    max-width: 140px;
 }
 
-.DeliveryHeaderWrapper {
+.EmployeesHeaderWrapper {
     background-color: rgba(80, 110, 223, 0.1);
     width: 1100px;
     height: 50px;
