--- a/src/views/ProductsPage/CategoriesTable/CategoriesTable.css
+++ b/src/views/ProductsPage/CategoriesTable/CategoriesTable.css
@@ -7,7 +7,7 @@
     margin-left: 355px;
 }
 
-.CategoryPanelWrapper {
+.CategoriesPanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -20,7 +20,7 @@
     margin-left: 355px;
 }
 
-.CategoryHeaderWrapper {
+.CategoriesHeaderWrapper {
     background-color: rgba(80, 110, 223, 0.1);
     width: 440px;
     height: 50px;
@@ -30,7 +30,7 @@
     display: inline-flex;
 }
 
-.CategoryID{
+.CategoriesID{
     margin-left: 75px;
     height: 19px;
     color: #2F2F2F;
@@ -43,7 +43,7 @@
     gap: 250px;
 }
 
-.CategoryName{
+.CategoriesName{
     margin-left: 110px;
     height: 19px;
     color: #2F2F2F;
@@ -55,7 +55,7 @@
     max-width: 100px;
 }
 
-.ElementPanelWrapper {
+.ElementsPanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -68,7 +68,7 @@
     margin-left: 1015px;
 }
 
-.ElementID{
+.ElementsID{
     margin-left: 75px;
     height: 19px;
     color: #2F2F2F;
@@ -81,7 +81,7 @@
     gap: 250px;
 }
 
-.ElementName{
+.ElementsName{
     margin-left: 110px;
     height: 19px;
     color: #2F2F2F;
@@ -93,7 +93,7 @@
     max-width: 100px;
 }
 
-.ElementHeaderWrapper {
+.ElementsHeaderWrapper {
     background-color: rgba(80, 110, 223, 0.1);
     width: 440px;
     height: 50px;
