--- a/src/views/StoragePage/StoragePanel/StoragePanel.css
+++ b/src/views/StoragePage/StoragePanel/StoragePanel.css
@@ -1,4 +1,4 @@
-.UsersPanelWrapper {
+.StoragePanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -51,7 +51,7 @@
     max-width: 100px;
 }
 
-.HeaderWrapper {
+.StorageHeaderWrapper {
     background-color: rgba(80, 110, 223, 0.1);
     width: 1100px;
     height: 50px;
