--- a/src/views/DeliveriesPage/Delivery/Delivery.css
+++ b/src/views/DeliveriesPage/Delivery/Delivery.css
@@ -46,6 +46,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 165px;
-    max-width: 50px;
+    margin-left: 90px;
+    max-width: 190px;
+    text-align: center;
 }
