--- a/src/views/OrdersPage/Order/Order.css
+++ b/src/views/OrdersPage/Order/Order.css
@@ -46,6 +46,7 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 150px;
-    max-width: 50px;
+    margin-left: 70px;
+    max-width: 190px;
+    text-align: center;
 }
