--- a/src/views/ProductsPage/Element/Element.css
+++ b/src/views/ProductsPage/Element/Element.css
@@ -8,11 +8,11 @@
 }
 
 .ElementID {
-    margin-left: 90px;
+    margin-left: 80px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     display: flex;
-    max-width: 80px;
+    max-width: 100px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -20,12 +20,13 @@
 }
 
 .ElementName {
+    margin-left: 50px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    max-width: 180px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 120px;
-    max-width: 150px;
     justify-content: center;
 }
