--- a/src/views/ProductsPage/ProductsTable/ProductsTable.css
+++ b/src/views/ProductsPage/ProductsTable/ProductsTable.css
@@ -1,4 +1,4 @@
-.ProductsPanelWrapper {
+.ProductsPanelWrapper[type="default"] {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -8,7 +8,20 @@
     box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
     position: absolute;
     margin-top: 30px;
-    margin-left: 250px;
+    margin-left: 302px;
+}
+
+.ProductsPanelWrapper[type="selected"] {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    overflow-y: scroll;
+    height: 650px;
+    width: 1250px;
+    background-color: #FFFFFF;
+    box-shadow: 0 1px 4px 0 rgba(0,0,0,0.5);
+    position: absolute;
+    margin-top: 175px;
+    margin-left: 302px;
 }
 
 .RowProductsButtons{
@@ -17,12 +30,12 @@
     height: 50px;
     gap: 50px;
     margin-top: 210px;
-    margin-left: 475px;
+    margin-left: 520px;
 }
 
 .ProductsID{
     margin-left: 15px;
-    height: 25px;
+    height: 19px;
     color: #2F2F2F;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
