--- a/src/views/ProductsPage/components/ManageProducts/Edit/Edit.css
+++ b/src/views/ProductsPage/components/ManageProducts/Edit/Edit.css
@@ -1,4 +1,4 @@
-.CreateProductPanelWrapper {
+.EditProductsPanelWrapper {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     overflow-y: scroll;
@@ -11,48 +11,104 @@
     margin-left: 302px;
 }
 
-.ProductAcceptExteriorButtonBox{
+.EditProductsHeaderWrapper {
+    background-color: rgba(80, 110, 223, 0.1);
+    width: 1240px;
+    height: 50px;
     display: flex;
-    height: 35px;
-    width: 180px;
-    border-radius: 8px;
-    background-color: #969393;
-    box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
-    margin-bottom: 24px;
-    justify-content: center;
     align-items: center;
-    font-family: 'Montserrat', sans-serif;
-    font-size: 14px;
-    font-weight: 500;
-    letter-spacing: 0;
-    line-height: 18px;
-    margin-top: 15px;
-    margin-left: 835px;
-    position: absolute;
-}
-
-.ProductAcceptButtonBox{
+    position: sticky;
     display: inline-flex;
-    height: 59px;
-    width: 240px;
-    align-items: center;
-    text-align: center;
-    padding-left: 9px;
-    padding-right: 9px;
+    gap: 30px;
 }
 
-.ProductLabel{
+.EditProductsID{
+    margin-left: 15px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 125px;
+}
+
+.EditProductsCategory{
+    margin-left: 65px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 100px;
+}
+
+.EditProductsElement{
+    margin-left: 70px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 140px;
+}
+
+.EditProductsProducent{
+    margin-left: 70px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 140px;
+}
+
+.EditProductsNumber{
+    margin-left: 70px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 140px;
+}
+
+.EditProductsDate{
+    margin-left: 70px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 140px;
+}
+
+.EditProductsWeight{
+    margin-left: 70px;
+    height: 19px;
+    color: #2F2F2F;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    letter-spacing: 0;
+    line-height: 19px;
+    max-width: 140px;
+}
+
+.EditProductLabel {
     inline-size: 150px;
     display: inline-block;
-}
-
-.CreateProductWrapper {
-    height: 54.55px;
-    width: 1238px;
-    display: flex;
-    align-items: center;
-    background-color: white;
-    border: 1px solid #E4E7EF;
 }
 
 .ProductFirstBox{
@@ -137,8 +193,4 @@
     border: 1px solid #B5B5B5;
     background-color: #FFFFFF;
     margin-left: 40px;
-}
-
-.CreateProductLabel{
-    display: inline-flex;
 }
