--- a/src/views/ProductsPage/Product/Product.css
+++ b/src/views/ProductsPage/Product/Product.css
@@ -8,74 +8,86 @@
 }
 
 .ProductID {
-    margin-left: 85px;
+    margin-left: 55px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
     display: flex;
-    justify-content: left;
-    max-width: 50px;
+    justify-content: center;
+    max-width: 75px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
 }
 
 .ProductCategory {
+    margin-left: 50px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 155px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 70px;
-    max-width: 155px;
 }
 
 .ProductElement {
+    margin-left: 10px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    max-width: 160px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 35px;
-    max-width: 110px;
 }
 
 
 .ProductProducent {
+    margin-left: 5px;
+    max-width: 225px;
     font-family: 'Montserrat', sans-serif;
-    width: 100%;
+    width: 225px;
+    display: flex;
+    justify-content: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 40px;
-    max-width: 160px;
 }
 
 .ProductNumber {
+    margin-left: 23px;
+    max-width: 125px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    justify-content: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 40px;
-    max-width: 125px;
 }
 
 .ProductDate {
+    margin-left: 55px;
+    max-width: 125px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    justify-content: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 60px;
-    max-width: 125px;
 }
 
 .ProductWeight {
+    margin-left: 65px;
+    max-width: 75px;
     font-family: 'Montserrat', sans-serif;
     width: 100%;
+    display: flex;
+    justify-content: center;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    margin-left: 85px;
-    max-width: 50px;
 }
