--- a/src/views/HomePage/components/HomeBoxes.css
+++ b/src/views/HomePage/components/HomeBoxes.css
@@ -3,7 +3,7 @@
     height: 50px;
     width: 240px;
     border-radius: 8px;
-    background-color: #FFFFFF;
+    background: linear-gradient(184deg, #19628d 0%, #34ab64d9 100%);
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
     margin-bottom: 24px;
     justify-content: center;
