--- a/src/views/RaportsPage/components/CreateRaport/CreateRaport.css
+++ b/src/views/RaportsPage/components/CreateRaport/CreateRaport.css
@@ -15,7 +15,7 @@
     height: 35px;
     width: 180px;
     border-radius: 8px;
-    background-color: #969393;
+    background: linear-gradient(180deg, #105a3f 0%, #87b331d9 100%);
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
     margin-bottom: 24px;
     justify-content: center;
@@ -102,7 +102,6 @@
 
 .addButton{
     margin-left: 5px;
-    
     background: linear-gradient(135deg, #34a078 0%, #37B9C6 100%);
     border-radius: 8px;
 }
