--- a/src/views/DeliveriesPage/DeliveriesPage.css
+++ b/src/views/DeliveriesPage/DeliveriesPage.css
@@ -12,7 +12,7 @@
     height: 50px;
     width: 240px;
     border-radius: 8px;
-    background-color: #969393;
+    background: linear-gradient(180deg, #105a3f 0%, #87b331d9 100%);
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
     margin-bottom: 24px;
     justify-content: center;
