--- a/src/views/RaportsPage/RaportsPage.css
+++ b/src/views/RaportsPage/RaportsPage.css
@@ -6,3 +6,30 @@
     margin-right: -50%;
     transform: translate(-50%, -50%);
 }
+
+.RaportsPageExteriorButtonBox{
+    display: flex;
+    height: 50px;
+    width: 240px;
+    border-radius: 8px;
+    background: linear-gradient(165deg, #34a078 0%, #37B9C6 100%);
+    box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
+    margin-bottom: 24px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+
+.RaportsPageButtonBox{
+    display: inline-flex;
+    height: 59px;
+    width: 240px;
+    align-items: center;
+    text-align: center;
+    padding-left: 9px;
+    padding-right: 9px;
+}
