--- a/src/views/ProductsPage/ProductsPage.css
+++ b/src/views/ProductsPage/ProductsPage.css
@@ -16,7 +16,7 @@
     height: 50px;
     width: 240px;
     border-radius: 8px;
-    background-color: #969393;
+    background: linear-gradient(10deg, #19628d 0%, #34ab64d9 100%);
     box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
     margin-bottom: 24px;
     justify-content: center;
