--- a/src/views/ProductsPage/ProductsTable/ProductsTable.css
+++ b/src/views/ProductsPage/ProductsTable/ProductsTable.css
@@ -128,6 +128,57 @@
     gap: 30px;
 }
 
+.ProductsAddButton {
+    display: flex;
+    height: 50px;
+    width: 240px;
+    border-radius: 8px;
+    background: linear-gradient(180deg, #105a3f 0%, #87b331d9 100%);
+    box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
+    margin-bottom: 24px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+
+.ProductsEditButton {
+    display: flex;
+    height: 50px;
+    width: 240px;
+    border-radius: 8px;
+    background: linear-gradient(165deg, #5e9d1c 10%, #c51c9b 100%);
+    box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
+    margin-bottom: 24px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+
+.ProductsDeleteButton {
+    display: flex;
+    height: 50px;
+    width: 240px;
+    border-radius: 8px;
+    background: linear-gradient(135deg, #cc37d3 0%, #c02645 100%);
+    box-shadow: 0 0 4px 0 rgba(0,0,0,0.5);
+    margin-bottom: 24px;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    letter-spacing: 0;
+    line-height: 18px;
+}
+
 ::-webkit-scrollbar {
     width: 10px;
 }
